invalid_label_arg_keywords_test/invalid_label_arg_keywords_test_3.src
.IPPcode24
CALL string